--- a/public/teste.html
+++ b/public/teste.html
@@ -8,269 +8,311 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
-    <style>
-:root {
-    --primary-color: #3498db;
-    --secondary-color: #2ecc71;
-    --background-color: #f4f4f4;
-    --text-color: #333;
-    --sidebar-color: #2c3e50;
-    --card-bg-color: #fff;
-    --hover-color: #e74c3c;
-    --border-radius: 8px;
-    --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-body, html {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: var(--background-color);
-    color: var(--text-color);
-}
-
-.container {
-    display: grid;
-    grid-template-columns: 300px 1fr;
-    height: 100vh;
-}
-
-.sidebar {
-    background-color: var(--sidebar-color);
-    padding: 20px;
-    color: white;
-    overflow-y: auto;
-}
-
-.main-content {
-    padding: 30px;
-    overflow-y: auto;
-}
-
-h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-    text-align: center;
-    color: white;
-}
-
-.dashboard {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    margin-bottom: 30px;
-}
-
-.metric-card {
-    background-color: var(--card-bg-color);
-    border-radius: var(--border-radius);
-    padding: 20px;
-    box-shadow: var(--box-shadow);
-    transition: transform 0.3s ease;
-}
-
-.metric-card:hover {
-    transform: translateY(-5px);
-}
-
-.metric-title {
-    font-size: 18px;
-    color: var(--primary-color);
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-
-.metric-value {
-    font-size: 24px;
-    font-weight: bold;
-    color: var(--text-color);
-}
-
-.order-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
-}
-
-.order-item {
-    background-color: var(--card-bg-color);
-    border-radius: var(--border-radius);
-    padding: 20px;
-    box-shadow: var(--box-shadow);
-    transition: all 0.3s ease;
-}
-
-.order-item:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-}
-
-.order-options {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 10px;
-}
-
-.order-options i {
-    cursor: pointer;
-    margin-left: 10px;
-    color: var(--primary-color);
-    transition: color 0.3s ease;
-}
-
-.order-options i:hover {
-    color: var(--hover-color);
-}
-
-.action-button {
-    background-color: var(--primary-color);
-    color: white;
-    border: none;
-    padding: 12px 20px;
-    border-radius: var(--border-radius);
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-    width: 100%;
-    margin-top: 10px;
-}
-
-.action-button:hover {
-    background-color: var(--hover-color);
-}
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(5px);
-}
-
-.modal-content {
-    background-color: var(--card-bg-color);
-    margin: 10% auto;
-    padding: 30px;
-    border-radius: var(--border-radius);
-    width: 80%;
-    max-width: 600px;
-    box-shadow: var(--box-shadow);
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: color 0.3s ease;
-}
-
-.close:hover {
-    color: var(--hover-color);
-}
-
-.courier-name {
-    font-weight: bold;
-    color: var(--primary-color);
-}
-
-.view-button, .print-button {
-    background-color: var(--secondary-color);
-    color: white;
-    border: none;
-    padding: 8px 15px;
-    border-radius: var(--border-radius);
-    cursor: pointer;
-    font-size: 14px;
-    margin-left: 10px;
-    transition: background-color 0.3s ease;
-}
-
-.view-button:hover, .print-button:hover {
-    background-color: var(--hover-color);
-}
-
-.print-button {
-    background-color: var(--primary-color);
-}
-
-#createOrderSection {
-    background-color: var(--card-bg-color);
-    border-radius: var(--border-radius);
-    padding: 25px;
-    margin-bottom: 30px;
-    box-shadow: var(--box-shadow);
-}
-
-#createOrderForm input,
-#createOrderForm select,
-#createOrderForm textarea {
-    width: 100%;
-    padding: 12px;
-    margin-bottom: 15px;
-    border: 1px solid #ddd;
-    border-radius: var(--border-radius);
-    font-size: 16px;
-}
-
-#createOrderForm label {
-    display: block;
-    margin-bottom: 8px;
-    font-weight: 500;
-}
-
-#toggleFormButton, #toggleCourierTimeButton {
-    background-color: var(--secondary-color);
-    color: white;
-    border: none;
-    padding: 12px 20px;
-    border-radius: var(--border-radius);
-    cursor: pointer;
-    font-size: 16px;
-    margin-bottom: 20px;
-    transition: background-color 0.3s ease;
-}
-
-#toggleFormButton:hover, #toggleCourierTimeButton:hover {
-    background-color: var(--hover-color);
-}
-
-.status-open { color: #e74c3c; }
-.status-accepted { color: #f1c40f; }
-.status-ready { color: #8E44AD; }
-.status-onGoing { color: #3498db; }
-.status-dispatched { color: #e67e22; }
-
-@media (max-width: 1200px) {
+<style>
+    body {
+        font-family: 'Open Sans', sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #1b1b1b;
+        color: #f5f5f5;
+    }
     .container {
-        grid-template-columns: 1fr;
+        display: flex;
+        height: 100vh;
     }
     .sidebar {
+        width: 280px;
+        background-color: #282828;
+        padding: 15px;
+        overflow-y: auto;
+        box-shadow: 3px 0 10px rgba(0, 0, 0, 0.2);
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
+        flex-direction: column;
     }
-    .sidebar h2 {
+    .main-content {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        padding: 25px;
+        overflow-y: auto;
+        background-color: #2d2d2d;
+    }
+    .dashboard {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 30px;
+    }
+    .metric-card {
+        background-color: #3c3c3c;
+        border-radius: 10px;
+        padding: 20px;
+        width: 30%;
+        box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+        transition: transform 0.2s;
+    }
+    .metric-card:hover {
+        transform: translateY(-5px);
+    }
+    .metric-title {
+        font-size: 16px;
+        color: #f1f1f1;
+        margin-bottom: 10px;
+        font-weight: bold;
+    }
+    .metric-value {
+        font-size: 20px;
+        font-weight: bold;
+        color: #e0e0e0;
+    }
+    .order-list {
+        flex-grow: 1;
+        overflow-y: auto;
+    }
+    .order-item {
+        background-color: #444;
+        margin-bottom: 15px;
+        padding: 20px;
+        border-radius: 10px;
+        position: relative;
+        transition: all 0.3s ease;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    .order-item:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
+    h2 {
+        color: #f5f5f5;
+        margin-bottom: 25px;
+        font-size: 26px;
+        text-align: center;
+    }
+    .order-options {
+        position: absolute;
+        right: 15px;
+        top: 15px;
+    }
+    .order-options i {
+        cursor: pointer;
+        margin-left: 8px;
+        color: #66b2ff;
+        transition: color 0.3s ease;
+    }
+    .order-options i:hover {
+        color: #3385ff;
+    }
+    .error {
+        color: #ff4d4d;
+        font-weight: bold;
+        background-color: #ffcccc;
+        padding: 12px;
+        border-radius: 6px;
+        margin-top: 15px;
+    }
+    .status-open { color: #ff4d4d; }
+    .status-accepted { color: #ffd11a; }
+    .status-ready { color: #a64dff; }
+    .status-onGoing { color: #4db8ff; }
+    .status-dispatched { color: #ff8533; }
+    .action-button {
+        background-color: #66b2ff;
+        color: white;
+        border: none;
+        padding: 12px 18px;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 18px;
+        margin-top: 12px;
+        transition: background-color 0.3s ease;
         width: 100%;
     }
-}
-
-@media (max-width: 768px) {
-    .dashboard, .order-list {
-        grid-template-columns: 1fr;
+    .action-button:hover {
+        background-color: #3385ff;
     }
-    .action-button, #toggleFormButton, #toggleCourierTimeButton {
-        padding: 10px 15px;
+    #paymentBreakdown {
         font-size: 14px;
+        margin-top: 8px;
+        color: #b3b3b3;
     }
-}
-    </style>
+    .label {
+        color: #b3b3b3;
+    }
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.6);
+    }
+    .modal-content {
+        background-color: #333;
+        margin: 10% auto;
+        padding: 25px;
+        border: 1px solid #444;
+        width: 75%;
+        max-width: 650px;
+        border-radius: 12px;
+        color: #f5f5f5;
+    }
+    .close {
+        color: #ccc;
+        float: right;
+        font-size: 30px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+    .close:hover,
+    .close:focus {
+        color: #fff;
+        text-decoration: none;
+        cursor: pointer;
+    }
+    .courier-name {
+        font-weight: bold;
+        color: #66b2ff;
+    }
+    .courier-deliveries {
+        margin-bottom: 15px;
+        padding: 12px;
+        background-color: #555;
+        border-radius: 8px;
+    }
+    .view-button, .print-button {
+        background-color: #29a329;
+        color: white;
+        border: none;
+        padding: 8px 15px;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 14px;
+        margin-left: 12px;
+    }
+    .view-button:hover {
+        background-color: #248f24;
+    }
+    .print-button {
+        background-color: #ff9933;
+    }
+    .print-button:hover {
+        background-color: #e68a00;
+    }
+    .ongoing-orders-list {
+        list-style-type: none;
+        padding: 0;
+    }
+    .ongoing-order-item {
+        background-color: #3d3d3d;
+        margin-bottom: 15px;
+        padding: 12px;
+        border-radius: 8px;
+    }
+    .ongoing-order-item h4 {
+        margin: 0 0 8px 0;
+        color: #f5f5f5;
+    }
+    .same-address {
+        color: #ff9933;
+        font-weight: bold;
+    }
+    .cancellation-popup,
+    .same-address-popup {
+        position: fixed;
+        bottom: 25px;
+        right: 25px;
+        background-color: #ff4d4d;
+        color: white;
+        padding: 18px;
+        border-radius: 8px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        z-index: 1000;
+        display: none;
+    }
+    .cancellation-popup .close,
+    .same-address-popup .close {
+        color: white;
+        float: right;
+        font-size: 22px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+    #averageTicket {
+        font-weight: bold;
+        color: #66ff66;
+    }
+    .hide-notification-button {
+        background-color: #3385ff;
+        color: white;
+        border: none;
+        padding: 8px 15px;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 14px;
+        margin-top: 12px;
+    }
+    .hide-notification-button:hover {
+        background-color: #2673cc;
+    }
+    #createOrderSection {
+        background-color: #3c3c3c;
+        border-radius: 10px;
+        padding: 20px;
+        margin-bottom: 30px;
+        box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    }
+    #createOrderForm {
+        display: none;
+    }
+    #createOrderForm input,
+    #createOrderForm select,
+    #createOrderForm textarea {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 12px;
+        border: 1px solid #666;
+        border-radius: 6px;
+        background-color: #2b2b2b;
+        color: #f5f5f5;
+    }
+    #createOrderForm label {
+        display: block;
+        margin-bottom: 8px;
+        font-weight: bold;
+        color: #f1f1f1;
+    }
+    #toggleFormButton, #toggleCourierTimeButton {
+        background-color: #29a329;
+        color: white;
+        border: none;
+        padding: 12px 18px;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 18px;
+        margin-bottom: 12px;
+        transition: background-color 0.3s ease;
+    }
+    #toggleFormButton:hover, #toggleCourierTimeButton:hover {
+        background-color: #248f24;
+    }
+    #courierTimeTracking {
+        display: none;
+        margin-top: 25px;
+        background-color: #3c3c3c;
+        border-radius: 10px;
+        padding: 20px;
+        box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    }
+    .courier-time-item {
+        margin-bottom: 15px;
+        padding: 12px;
+        background-color: #555;
+        border-radius: 8px;
+    }
+</style>
+
 </head>
 <body>
     <div class="container">
