--- a/public/teste.html
+++ b/public/teste.html
@@ -8,150 +8,220 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Open Sans', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
+<style>
+    body {
+        font-family: 'Roboto', sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+        color: #333;
+    }
 
-        .header {
-            background-color: #343a40;
-            color: #fff;
-            padding: 10px 20px;
-            text-align: center;
-            font-size: 20px;
-            font-weight: bold;
-        }
+    .container {
+        display: flex;
+        height: 100vh;
+        overflow: hidden;
+    }
 
-        .container {
-            display: flex;
-            flex: 1;
-            padding: 20px;
-            gap: 20px;
-            overflow-y: auto;
-            background-color: #f8f9fa;
-        }
+    .sidebar {
+        width: 260px;
+        background-color: #2c3e50;
+        padding: 20px;
+        box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
 
-        .column {
-            flex: 1;
-            background-color: #ffffff;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-            height: 80vh;
-            overflow-y: auto;
-        }
+    .sidebar h2 {
+        font-size: 20px;
+        margin-bottom: 15px;
+    }
 
-        .column h2 {
-            margin: 0 0 10px 0;
-            font-size: 18px;
-            color: #495057;
-            text-align: center;
-        }
+    .sidebar button {
+        background-color: #3498db;
+        border: none;
+        color: #fff;
+        padding: 10px;
+        margin-top: 10px;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
 
-        .order-item {
-            background-color: #ffffff;
-            padding: 10px;
-            margin-bottom: 15px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: box-shadow 0.3s ease;
-        }
+    .sidebar button:hover {
+        background-color: #2980b9;
+    }
 
-        .order-item:hover {
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
+    .main-content {
+        flex: 1;
+        padding: 20px;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        background-color: #ecf0f1;
+    }
 
-        .order-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 10px;
-        }
+    .dashboard {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+    }
 
-        .order-id {
-            font-weight: bold;
-            color: #495057;
-        }
+    .metric-card {
+        background-color: #ffffff;
+        border-radius: 8px;
+        padding: 20px;
+        width: 30%;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 10px;
+    }
 
-        .order-status {
-            padding: 5px 10px;
-            border-radius: 15px;
-            font-size: 12px;
-            font-weight: bold;
-            color: #fff;
-        }
+    .metric-title {
+        font-size: 16px;
+        color: #2c3e50;
+        margin-bottom: 10px;
+        font-weight: bold;
+    }
 
-        .status-aguardando {
-            background-color: #ffc107;
-        }
+    .metric-value {
+        font-size: 22px;
+        font-weight: bold;
+        color: #2980b9;
+    }
 
-        .status-em-preparo {
-            background-color: #17a2b8;
-        }
+    .order-list-container {
+        display: flex;
+        gap: 20px;
+        height: 60vh;
+        overflow-y: auto;
+    }
 
-        .status-em-entrega {
-            background-color: #28a745;
-        }
+    .order-column {
+        flex: 1;
+        background-color: #ffffff;
+        padding: 15px;
+        border-radius: 8px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        overflow-y: auto;
+    }
 
-        .order-body {
-            font-size: 14px;
-            color: #495057;
-        }
+    .order-column h3 {
+        font-size: 18px;
+        color: #2c3e50;
+        margin-bottom: 10px;
+    }
 
-        .order-body p {
-            margin: 5px 0;
-        }
+    .order-item {
+        background-color: #ecf0f1;
+        padding: 15px;
+        margin-bottom: 15px;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        position: relative;
+    }
 
-        .order-options {
-            margin-top: 10px;
-            text-align: right;
-        }
+    .order-item:hover {
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
 
-        .order-options i {
-            margin-left: 10px;
-            cursor: pointer;
-            color: #007bff;
-            transition: color 0.3s ease;
-        }
+    .order-item h4 {
+        margin: 0;
+        font-size: 16px;
+        color: #2c3e50;
+        font-weight: bold;
+    }
 
-        .order-options i:hover {
-            color: #0056b3;
-        }
+    .order-status {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        padding: 5px 10px;
+        font-size: 12px;
+        border-radius: 3px;
+        color: #ffffff;
+        font-weight: bold;
+    }
 
-        .action-button {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-            width: 100%;
-            margin-top: 20px;
-        }
+    .status-aguardando {
+        background-color: #f39c12;
+    }
 
-        .action-button:hover {
-            background-color: #0056b3;
-        }
+    .status-em-preparo {
+        background-color: #3498db;
+    }
 
-        .footer {
-            background-color: #343a40;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            font-size: 14px;
-        }
-    </style>
+    .status-em-entrega {
+        background-color: #27ae60;
+    }
+
+    .order-details {
+        margin-top: 10px;
+        font-size: 14px;
+        color: #34495e;
+    }
+
+    .order-options {
+        display: flex;
+        gap: 10px;
+        margin-top: 15px;
+    }
+
+    .order-options i {
+        cursor: pointer;
+        color: #2980b9;
+        font-size: 18px;
+    }
+
+    .order-options i:hover {
+        color: #1f6391;
+    }
+
+    /* Botões e formulários */
+    .action-button {
+        background-color: #3498db;
+        color: white;
+        border: none;
+        padding: 10px 15px;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
+        width: 100%;
+    }
+
+    .action-button:hover {
+        background-color: #2980b9;
+    }
+
+    .view-button,
+    .print-button {
+        background-color: #27ae60;
+        color: white;
+        border: none;
+        padding: 8px 12px;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 14px;
+    }
+
+    .view-button:hover {
+        background-color: #219150;
+    }
+
+    .print-button {
+        background-color: #e67e22;
+    }
+
+    .print-button:hover {
+        background-color: #d35400;
+    }
+</style>
 </head>
 <body>
     <div class="container">
