--- a/public/teste.html
+++ b/public/teste.html
@@ -216,11 +216,12 @@
             padding: 10px 15px;
             border: none;
             border-radius: 4px;
-            cursor: pointer;
+            cursor: default;
             font-size: 16px;
             font-weight: bold;
             flex: 1;
             margin: 0 5px;
+            text-align: center;
         }
 
         .action-btn.primary {
@@ -268,6 +269,50 @@
             text-decoration: none;
             cursor: pointer;
         }
+
+        .courier-deliveries {
+            background-color: #f8f9fa;
+            border-radius: 8px;
+            padding: 15px;
+            margin-bottom: 15px;
+        }
+
+        .courier-name {
+            font-size: 18px;
+            font-weight: bold;
+            color: var(--secondary-color);
+            margin-bottom: 10px;
+        }
+
+        .courier-stats {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .courier-stat {
+            text-align: center;
+            padding: 10px;
+            background-color: var(--white);
+            border-radius: 4px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .courier-stat i {
+            font-size: 24px;
+            margin-bottom: 5px;
+        }
+
+        .courier-stat.completed i {
+            color: var(--success-color);
+        }
+
+        .courier-stat.ongoing i {
+            color: var(--warning-color);
+        }
+
+        .courier-stat.same-address i {
+            color: var(--danger-color);
+        }
     </style>
 </head>
 <body>
@@ -294,7 +339,7 @@
                     </div>
                 </div>
                 <div class="order-status-tabs">
-                    <div class="status-tab active" onclick="filterOrders('preparing')">Em Preparo</div>
+                    <div class="status-tab" onclick="filterOrders('preparing')">Em Preparo</div>
                     <div class="status-tab" onclick="filterOrders('onGoing')">A Caminho</div>
                     <div class="status-tab" onclick="filterOrders('closed')">Finalizados</div>
                     <div class="status-tab" onclick="filterOrders('cancelled')">Cancelados</div>
@@ -312,7 +357,55 @@
             <span class="close" onclick="closeCreateOrderModal()">&times;</span>
             <h2>Criar Novo Pedido</h2>
             <form id="createOrderForm">
-                <!-- Campos do formulário aqui -->
+                <label for="orderId">ID do Pedido:</label>
+                <input type="text" id="orderId" required>
+
+                <label for="customerName">Nome do Cliente:</label>
+                <input type="text" id="customerName" required>
+
+                <label for="customerPhone">Telefone do Cliente:</label>
+                <input type="text" id="customerPhone" required>
+
+                <label for="street">Logradouro:</label>
+                <input type="text" id="street" required>
+
+                <label for="streetNumber">Número:</label>
+                <input type="text" id="streetNumber" required>
+
+                <label for="neighborhood">Bairro:</label>
+                <input type="text" id="neighborhood" required>
+
+                <label for="complement">Complemento:</label>
+                <input type="text" id="complement">
+
+                <label for="zipCode">CEP:</label>
+                <input type="text" id="zipCode" required>
+
+                <label for="status">Status:</label>
+                <select id="status" required>
+                    <option value="open">Aberto</option>
+                    <option value="ready">Pronto</option>
+                </select>
+
+                <label for="orderDetails">Detalhes do Pedido:</label>
+                <textarea id="orderDetails" required></textarea>
+
+                <label>Método de Pagamento:</label>
+                <div>
+                    <input type="radio" id="paymentMoney" name="paymentMethod" value="money" required>
+                    <label for="paymentMoney">Dinheiro</label>
+                    <input type="radio" id="paymentCard" name="paymentMethod" value="card">
+                    <label for="paymentCard">Cartão</label>
+                    <input type="radio" id="paymentOnline" name="paymentMethod" value="online">
+                    <label for="paymentOnline">Online</label>
+                </div>
+
+                <label for="orderTotal">Valor Total:</label>
+                <input type="number" id="orderTotal" step="0.01" required>
+
+                <label for="notes">Observações:</label>
+                <textarea id="notes"></textarea>
+
                 <button type="button" onclick="submitOrder()">Criar Pedido</button>
             </form>
         </div>
@@ -348,8 +441,9 @@
 
         let currentOrders = [];
         let filteredOrders = [];
+        let currentTab = 'preparing';
 
-        async function fetchOrders() {
+async function fetchOrders() {
             try {
                 const now = new Date();
                 const startDate = formatDate(new Date(now.setHours(0, 0, 0, 0)));
@@ -365,7 +459,7 @@
                 });
                 console.log('Pedidos recebidos:', response.data);
                 currentOrders = response.data.filter(order => isWithinTimeRange(new Date(order.creationDate)));
-                filterOrders('preparing'); // Inicialmente, mostra os pedidos em preparo
+                filterOrders(currentTab);
             } catch (error) {
                 console.error('Erro ao buscar pedidos:', error);
                 document.getElementById('orderList').innerHTML = '<p class="error">Erro ao carregar pedidos. Por favor, tente novamente mais tarde.</p>';
@@ -386,11 +480,11 @@
                     <div class="order-details">
                         <div class="order-info"><i class="fas fa-user"></i>${order.customer.customerName}</div>
                         <div class="order-info"><i class="fas fa-motorcycle"></i>${order.courier ? order.courier.courierName : 'Não atribuído'}</div>
-                        <div class="order-info"><i class="fas fa-credit-card"></i>${translatePaymentMethod(order.paymentMethod)}</div>
+                        <div class="order-info"><i class="${getPaymentIcon(order.paymentMethod)}"></i>${translatePaymentMethod(order.paymentMethod)}</div>
                         <div class="order-info order-total"><i class="fas fa-dollar-sign"></i>R$ ${order.orderTotal.toFixed(2)}</div>
                     </div>
                     <div class="order-actions">
-                        <button class="action-btn primary" onclick="updateOrderStatus('${order.id}', '${getNextStatus(order.status)}')">${getStatusButton(order.status)}</button>
+                        <div class="action-btn primary">${getStatusButton(order.status)}</div>
                         <button class="action-btn secondary" onclick="printOrderDetails('${order.id}')"><i class="fas fa-print"></i></button>
                     </div>
                 `;
@@ -408,7 +502,7 @@
             return date.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
         }
 
-function isWithinTimeRange(date) {
+        function isWithinTimeRange(date) {
             const hour = date.getHours();
             const minutes = date.getMinutes();
             const totalMinutes = hour * 60 + minutes;
@@ -417,23 +511,13 @@ function isWithinTimeRange(date) {
 
         function getStatusButton(status) {
             switch (status) {
-                case 'open': return 'Aceitar';
-                case 'accepted': return 'Pronto';
-                case 'ready': return 'Entregar';
-                case 'onGoing': return 'Finalizar';
+                case 'open': return 'Aberto';
+                case 'accepted': return 'Aceito';
+                case 'ready': return 'Pronto';
+                case 'onGoing': return 'A Caminho';
                 case 'closed': return 'Finalizado';
                 case 'cancelled': return 'Cancelado';
                 default: return status;
-            }
-        }
-
-        function getNextStatus(currentStatus) {
-            switch (currentStatus) {
-                case 'open': return 'accepted';
-                case 'accepted': return 'ready';
-                case 'ready': return 'onGoing';
-                case 'onGoing': return 'closed';
-                default: return currentStatus;
             }
         }
 
@@ -446,7 +530,17 @@ function isWithinTimeRange(date) {
             }
         }
 
+        function getPaymentIcon(method) {
+            switch (method) {
+                case 'money': return 'fas fa-money-bill-wave';
+                case 'card': return 'far fa-credit-card';
+                case 'online': return 'fas fa-globe';
+                default: return 'fas fa-question-circle';
+            }
+        }
+
         function filterOrders(status) {
+            currentTab = status;
             switch (status) {
                 case 'preparing':
                     filteredOrders = currentOrders.filter(order => order.status === 'open' || order.status === 'ready');
@@ -469,7 +563,7 @@ function isWithinTimeRange(date) {
             document.querySelectorAll('.status-tab').forEach(tab => {
                 tab.classList.remove('active');
             });
-            event.target.classList.add('active');
+            document.querySelector(`.status-tab:nth-child(${['preparing', 'onGoing', 'closed', 'cancelled'].indexOf(status) + 1})`).classList.add('active');
         }
 
         function searchOrders() {
@@ -480,21 +574,6 @@ function isWithinTimeRange(date) {
                 (order.courier && order.courier.courierName.toLowerCase().includes(searchTerm))
             );
             updateOrderList(searchResults);
-        }
-
-        async function updateOrderStatus(orderId, newStatus) {
-            try {
-                // Aqui você implementaria a lógica para atualizar o status do pedido na API
-                console.log(`Atualizando pedido ${orderId} para status ${newStatus}`);
-                // Após atualizar na API, atualize localmente
-                const orderIndex = currentOrders.findIndex(order => order.id === orderId);
-                if (orderIndex !== -1) {
-                    currentOrders[orderIndex].status = newStatus;
-                    filterOrders(document.querySelector('.status-tab.active').textContent.toLowerCase());
-                }
-            } catch (error) {
-                console.error('Erro ao atualizar status do pedido:', error);
-            }
         }
 
         function printOrderDetails(orderId) {
@@ -528,11 +607,53 @@ function isWithinTimeRange(date) {
         }
 
         async function submitOrder() {
-            // Implementar a lógica de criação de pedido aqui
-            // Use o endpoint do iFood conforme solicitado
-            console.log('Criar novo pedido');
-            closeCreateOrderModal();
-            await fetchOrders(); // Atualiza a lista de pedidos após criar um novo
+            const order = {
+                id: document.getElementById('orderId').value,
+                status: document.getElementById('status').value,
+                paymentMethod: document.querySelector('input[name="paymentMethod"]:checked').value,
+                orderTotal: Number(document.getElementById('orderTotal').value),
+                notes: document.getElementById('notes').value,
+                orderDetails: document.getElementById('orderDetails').value,
+                deliveryPoint: {
+                    address: `${document.getElementById('street').value}, ${document.getElementById('streetNumber').value}, ${document.getElementById('neighborhood').value}`,
+                    street: document.getElementById('street').value,
+                    houseNumber: document.getElementById('streetNumber').value,
+                    complement: document.getElementById('complement').value,
+                    postalCode: document.getElementById('zipCode').value,
+                    city: "Natal",
+                    region: "RN",
+                    country: "BR"
+                },
+                customer: {
+                    customerPhone: document.getElementById('customerPhone').value,
+                    customerName: document.getElementById('customerName').value
+                }
+            };
+
+            try {
+                const response = await fetch('https://us-central1-cabana-8d55e.cloudfunctions.net/foodyDeliveryApi/createOrder', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': authToken
+                    },
+                    body: JSON.stringify(order)
+                });
+
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+
+                const result = await response.json();
+                console.log('Pedido criado:', result);
+                alert('Pedido criado com sucesso!');
+                document.getElementById('createOrderForm').reset();
+                closeCreateOrderModal();
+                fetchOrders();
+            } catch (error) {
+                console.error('Erro ao criar pedido:', error);
+                alert('Erro ao criar pedido: ' + error.message);
+            }
         }
 
         function showCourierDeliveriesModal() {
@@ -574,21 +695,42 @@ function isWithinTimeRange(date) {
 
             let content = '';
             for (const [courierName, deliveries] of Object.entries(courierDeliveries)) {
-                content += `<h3>${courierName}</h3>`;
-                content += `<p>Entregas finalizadas: ${deliveries.completed}</p>`;
-                content += `<p>Entregas em andamento: ${deliveries.ongoing}</p>`;
+                content += `
+                    <div class="courier-deliveries">
+                        <div class="courier-name">${courierName}</div>
+                        <div class="courier-stats">
+                            <div class="courier-stat completed">
+                                <i class="fas fa-check-circle"></i>
+                                <div>Finalizadas</div>
+                                <div>${deliveries.completed}</div>
+                            </div>
+                            <div class="courier-stat ongoing">
+                                <i class="fas fa-motorcycle"></i>
+                                <div>Em andamento</div>
+                                <div>${deliveries.ongoing}</div>
+                            </div>
+                `;
 
                 // Adicionar informações sobre entregas para o mesmo endereço
+                let sameAddressCount = 0;
                 if (sameAddressOrders[courierName]) {
                     for (const [address, orders] of Object.entries(sameAddressOrders[courierName])) {
                         if (orders.length > 1) {
-                            content += `<p>Mesma casa: ${orders.length} pedidos para ${address}</p>`;
+                            sameAddressCount += orders.length;
                         }
                     }
                 }
 
-                content += `<button onclick="showCourierOngoingDeliveries('${courierName}')">Ver Entregas em Andamento</button>`;
-                content += '<hr>';
+                content += `
+                            <div class="courier-stat same-address">
+                                <i class="fas fa-home"></i>
+                                <div>Mesma casa</div>
+                                <div>${sameAddressCount}</div>
+                            </div>
+                        </div>
+                        <button onclick="showCourierOngoingDeliveries('${courierName}')" class="btn btn-primary">Ver Entregas em Andamento</button>
+                    </div>
+                `;
             }
 
             document.getElementById('courierDeliveriesContent').innerHTML = content;
@@ -604,13 +746,12 @@ function isWithinTimeRange(date) {
             let content = `<h3>Entregas em Andamento - ${courierName}</h3>`;
             ongoingDeliveries.forEach(order => {
                 content += `
-                    <div>
-                        <p>Pedido #${order.id}</p>
+                    <div class="order-card">
+                        <p><strong>Pedido #${order.id}</strong></p>
                         <p>Cliente: ${order.customer.customerName}</p>
                         <p>Endereço: ${order.deliveryPoint.address}</p>
                         <p>Status: ${getStatusButton(order.status)}</p>
                     </div>
-                    <hr>
                 `;
             });
 
@@ -627,6 +768,11 @@ function isWithinTimeRange(date) {
                 event.target.style.display = 'none';
             }
         }
+
+        // Iniciar com a aba "Em Preparo" ativa
+        document.addEventListener('DOMContentLoaded', () => {
+            filterOrders('preparing');
+        });
     </script>
 </body>
 </html>
